--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "poke-air-conditioner",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://20220105.github.io/React_air-conditioning",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
@@ -22,6 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
